--- a/strompris-varsler/src/main/resources/application.properties
+++ b/strompris-varsler/src/main/resources/application.properties
@@ -11,7 +11,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # ===================================
 # JPA/HIBERNATE
 # ===================================
-spring.jpa.hibernate.ddl-auto=none
+# VIKTIG: Sett til 'create' eller 'update' for å lage tabeller automatisk
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
@@ -26,9 +27,17 @@ server.port=8080
 # ===================================
 logging.level.root=INFO
 logging.level.no.strompris=DEBUG
+logging.level.org.springframework.web=DEBUG
 
 # ===================================
 # API SETTINGS
 # ===================================
 strompris.api.base-url=https://www.hvakosterstrommen.no/api/v1/prices
-strompris.price-fetch.cron=0 5 * * * *
+# Kjør ikke automatisk ved oppstart (unngå feil hvis DB ikke er klar)
+strompris.price-fetch.cron=-
+
+# ===================================
+# JACKSON (JSON serialization)
+# ===================================
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.time-zone=Europe/Oslo
