--- a/strompris-varsler/src/main/resources/application.properties
+++ b/strompris-varsler/src/main/resources/application.properties
@@ -1,43 +1,46 @@
-spring.application.name=strompris-varsler
+# ==============================================
+# SERVER CONFIG
+# ==============================================
+server.port=8080
 
-# ===================================
-# DATABASE CONNECTION
-# ===================================
+# ==============================================
+# DATABASE CONFIG (PostgreSQL)
+# ==============================================
 spring.datasource.url=jdbc:postgresql://localhost:5432/strompris_db
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# ===================================
-# JPA/HIBERNATE
-# ===================================
-# VIKTIG: Sett til 'create' eller 'update' for å lage tabeller automatisk
+# JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
-# ===================================
-# SERVER
-# ===================================
-server.port=8080
+# ==============================================
+# EMAIL CONFIG (Gmail SMTP)
+# ==============================================
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=zubayraevzaurbek@gmail.com
+spring.mail.password=etoh otze amog xupb
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
-# ===================================
-# LOGGING
-# ===================================
-logging.level.root=INFO
-logging.level.no.strompris=DEBUG
-logging.level.org.springframework.web=DEBUG
+# Strømpris E-post konfigurasjon
+strompris.email.from=zubayraevzaurbek@gmail.com
+strompris.email.enabled=true
 
-# ===================================
-# API SETTINGS
-# ===================================
+# ==============================================
+# STRØMPRIS API CONFIG
+# ==============================================
 strompris.api.base-url=https://www.hvakosterstrommen.no/api/v1/prices
-# Kjør ikke automatisk ved oppstart (unngå feil hvis DB ikke er klar)
-strompris.price-fetch.cron=-
+strompris.price-fetch.cron=0 5 * * * *
 
-# ===================================
-# JACKSON (JSON serialization)
-# ===================================
-spring.jackson.serialization.write-dates-as-timestamps=false
-spring.jackson.time-zone=Europe/Oslo
+# ==============================================
+# LOGGING
+# ==============================================
+logging.level.no.strompris=INFO
+logging.level.org.springframework.mail=DEBUG
